@@ -25,6 +25,7 @@
 /*
  * @test id=generational
  * @summary Test that growth of old-gen triggers old-gen marking
+ * @key intermittent
  * @requires vm.gc.Shenandoah
  * @library /test/lib
  * @run driver TestOldGrowthTriggers
@@ -98,8 +99,12 @@ public class TestOldGrowthTriggers {
                 "-XX:+UnlockExperimentalVMOptions",
                 "-XX:+UseShenandoahGC",
                 "-XX:ShenandoahGCMode=generational",
+                "-XX:ShenandoahMinOldGenGrowthPercent=12.5",
+                "-XX:ShenandoahIgnoreOldGrowthBelowPercentage=10",
+                "-XX:ShenandoahMinOldGenGrowthRemainingHeapPercent=100",
                 "-XX:ShenandoahGuaranteedYoungGCInterval=0",
-                "-XX:ShenandoahGuaranteedOldGCInterval=0"
+                "-XX:ShenandoahGuaranteedOldGCInterval=0",
+                "-XX:-UseCompactObjectHeaders"
         );
 
         testOld("-Xlog:gc",
@@ -109,6 +114,9 @@ public class TestOldGrowthTriggers {
                 "-XX:+UnlockExperimentalVMOptions",
                 "-XX:+UseShenandoahGC",
                 "-XX:ShenandoahGCMode=generational",
+                "-XX:ShenandoahMinOldGenGrowthPercent=12.5",
+                "-XX:ShenandoahIgnoreOldGrowthBelowPercentage=10",
+                "-XX:ShenandoahMinOldGenGrowthRemainingHeapPercent=100",
                 "-XX:ShenandoahGuaranteedYoungGCInterval=0",
                 "-XX:ShenandoahGuaranteedOldGCInterval=0",
                 "-XX:+UseCompactObjectHeaders"
